# open-safe-frame

./: .gitignore  LICENSE  README.md  checklist.md  pyproject.toml  spec.md  tasks.md
.trae/documents/: plan_20260228_044714.md
configs/: .env.example  config.yaml
openclaw_plugin/: README.md  openclaw.plugin.json  package.json
openclaw_plugin/src/: config.ts  index.ts  rules.ts  types.ts
openclaw_plugin/src/core/: ai_analyzer.ts  ai_types.ts  consequence_engine.ts  constraint_manager.ts  coordinator.ts  decision_engine.ts  index.ts  intent_engine.ts  types.ts  value_engine.ts
src/: __init__.py
src/audit/emergency/: __init__.py  alerting.py  emergency_stop.py
src/core/: __init__.py  context.py  intent_parser.py  models.py  results.py
src/execution/: __init__.py
src/execution/monitoring/: realtime_monitor.py
src/execution/permission/: __init__.py  permission_manager.py  permission_model.py
src/execution/sandbox/: sandbox_manager.py
src/notification/: __init__.py  event_handler.py  models.py  notification_manager.py
src/notification/channels/feishu/: __init__.py  channel.py
src/notification/channels/telegram/: __init__.py  channel.py
src/notification/remote/: __init__.py  command_executor.py  emergency_stop.py
src/security/: __init__.py  decision_coordinator.py
src/security/constraints/: constraint_checker.py  constraint_definitions.py
src/security/risk/: __init__.py  risk_assessor.py  risk_matrix.py
src/security/values/: __init__.py  alignment_evaluator.py  core_values.py
